debug scroll progress bar

--- a/style/bem-box/_contact.scss
+++ b/style/bem-box/_contact.scss
@@ -15,16 +15,16 @@
     }
 
     &__emailImg {
-        background-image: url(../../images/contact-email-bg.png);
+        background-image: url(/images/contact-email-bg.png);
 
     }
 
     &__officeImg {
-        background-image: url(../../images/contact-office-bg.png);
+        background-image: url(/images/contact-office-bg.png);
     }
 
     &__phoneImg {
-        background-image: url(../../images/contact-phone-bg.png);
+        background-image: url(/images/contact-phone-bg.png);
     }
 
     &__emailImg,
