--- a/style/bem-box/_impressed.scss
+++ b/style/bem-box/_impressed.scss
@@ -1,6 +1,6 @@
 .b-impressed {
     min-height: 350px;
-    background-image: url(../../images/impressed-bg.png);
+    background-image: url(/images/impressed-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     justify-content: flex-end;
