--- a/style/bem-box/_portfolio.scss
+++ b/style/bem-box/_portfolio.scss
@@ -81,73 +81,73 @@
     }
 
     &__img1-1 {
-        background-image: url(../images/portfolio1-1.png);
+        background-image: url(/images/portfolio1-1.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     &__img1-2 {
-        background-image: url(../../images/portfolio1-2.png);
+        background-image: url(/images/portfolio1-2.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     &__img1-3 {
-        background-image: url(../../images/portfolio1-3.png);
+        background-image: url(/images/portfolio1-3.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     &__img1-4 {
-        background-image: url(../../images/portfolio1-4.png);
+        background-image: url(/images/portfolio1-4.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     &__img2-1 {
-        background-image: url(../../images/portfolio2-1.png);
+        background-image: url(/images/portfolio2-1.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     &__img2-2 {
-        background-image: url(../../images/portfolio2-2.png);
+        background-image: url(/images/portfolio2-2.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     &__img2-3 {
-        background-image: url(../../images/portfolio2-3.png);
+        background-image: url(/images/portfolio2-3.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     &__img2-4 {
-        background-image: url(../../images/portfolio2-4.png);
+        background-image: url(/images/portfolio2-4.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     &__img3-1 {
-        background-image: url(../../images/portfolio3-1.png);
+        background-image: url(/images/portfolio3-1.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     &__img3-2 {
-        background-image: url(../../images/portfolio3-2.png);
+        background-image: url(/images/portfolio3-2.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     &__img3-3 {
-        background-image: url(../../images/portfolio3-3.png);
+        background-image: url(/images/portfolio3-3.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     &__img3-4 {
-        background-image: url(../../images/portfolio3-4.png);
+        background-image: url(/images/portfolio3-4.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -177,7 +177,7 @@
         width: 30px;
         height: 30px;
         background-color: #000;
-        background-image: url(../../images/iconLike.png);
+        background-image: url(/images/iconLike.png);
         background-repeat: no-repeat;
         background-position: center;
 
@@ -190,7 +190,7 @@
         width: 30px;
         height: 30px;
         background-color: #000;
-        background-image: url(../../images/icon-link.png);
+        background-image: url(/images/icon-link.png);
         background-repeat: no-repeat;
         background-position: center;
 
