--- a/style/bem-box/_subscribe.scss
+++ b/style/bem-box/_subscribe.scss
@@ -1,6 +1,6 @@
 .b-subscribe {
     min-height: 370px;
-    background-image: url(../../images/subscribe-bg.png);
+    background-image: url(/images/subscribe-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
