--- a/style/style.css
+++ b/style/style.css
@@ -805,7 +805,7 @@ Due to the split circle of progress-left and progress right, we must use the ani
 }
 
 .b-portfolio__img1-1 {
-  background-image: url(../../images/portfolio1-1.png);
+  background-image: url(/images/portfolio1-1.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
