--- a/style/style.scss
+++ b/style/style.scss
@@ -33,7 +33,7 @@
 
 header {
     min-height: 740px;
-    background-image: url(/images/header-img.png);
+    background-image: url(../images/header-img.png);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 30px 90px;
