--- a/style/style.css
+++ b/style/style.css
@@ -1709,7 +1709,7 @@ Due to the split circle of progress-left and progress right, we must use the ani
 
 header {
   min-height: 740px;
-  background-image: url(/images/header-img.png);
+  background-image: url(../images/header-img.png);
   background-repeat: no-repeat;
   background-size: cover;
   padding: 30px 90px;
