--- a/style/bem-box/_team.scss
+++ b/style/bem-box/_team.scss
@@ -17,13 +17,12 @@
     }
 
     &__foto {
-        max-width: 285px;
+        width: 285px;
         height: 365px;
+        object-fit: cover;
 
         @include media-breakpoint-down(sm) {
             width: 100%;
-            height: 100%;
-            object-fit: cover;
         }
     }
 
