--- a/style/style.css
+++ b/style/style.css
@@ -982,16 +982,15 @@ Due to the split circle of progress-left and progress right, we must use the ani
 }
 
 .b-team__foto {
-  max-width: 285px;
+  width: 285px;
   height: 365px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 @media (max-width: 767.98px) {
   .b-team__foto {
     width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
   }
 }
 
@@ -1697,6 +1696,17 @@ Due to the split circle of progress-left and progress right, we must use the ani
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-bottom: 20px;
+}
+
+.b-footer__signature {
+  font-size: 20px;
+  color: #000;
+}
+
+.b-footer__signature:hover {
+  text-decoration: none;
+  color: #19bd9a;
 }
 
 .container {
@@ -1709,7 +1719,7 @@ Due to the split circle of progress-left and progress right, we must use the ani
 
 header {
   min-height: 740px;
-  background-image: url(../images/header-img.png);
+  background-image: url(/images/header-img.png);
   background-repeat: no-repeat;
   background-size: cover;
   padding: 30px 90px;
@@ -1732,7 +1742,7 @@ header {
   color: #333b46;
   line-height: 0.75;
   text-align: center;
-  padding: 12px;
+  padding: 11px;
 }
 
 .buttonLink:hover {
